--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<meta name="description" content="Nion is a Super Professional Personal Portfolio Template">
-    <meta name="keywords" content="Creativepersonal, resume, cv, portfolio, personal, developer, designer,personal resume, onepage, clean, modern">
-    <meta name="author" content="Tanvir Rahman Hridoy">-->
     <!-- PAGE TITLE -->
     <title>Nion</title>
     <!-- BOOTSTRAP CSS -->
@@ -21,13 +18,11 @@
     <!-- OWL CAROSEL CSS -->
     <link rel="stylesheet" href="assets/css/owl.carousel.css">
     <link rel="stylesheet" href="assets/css/owl.theme.css">
-<!--
-    &lt;!&ndash; MAGNIFIC CSS &ndash;&gt;
--->
+    <!-- MAGNIFIC CSS -->
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
-<!--    &lt;!&ndash; ANIMATE CSS &ndash;&gt;-->
+    <!--  ANIMATE CSS -->
     <link rel="stylesheet" href="assets/css/animate.min.css">
-  <!--  &lt;!&ndash; YOUTUBE CSS &ndash;&gt;-->
+    <!-- YOUTUBE CSS -->
     <link rel="stylesheet" href="assets/css/YTPlayer.css">
     <!-- MAIN STYLE CSS -->
     <link rel="stylesheet" href="assets/css/custom.css">
